# Library-Management

./: .coverage  .coveragerc  .gitignore  pytest.ini  setup.cfg
reports/: report.html
reports/junit/: junit.xml
src/app/config/: config.py  custome_error_code.py  enumeration.py  messages.py  types.py
src/app/controller/: main.py
src/app/controller/book/: handler.py  route.py
src/app/controller/book_url/: book_handler.py  book_route.py
src/app/controller/issue_book/: handler.py  route.py
src/app/controller/issue_book_url/: issue_book_handler.py  issue_book_route.py
src/app/controller/user/: handler.py  (+1 more)
src/app/dto/: book.py  issue_book.py  user.py
src/app/middleware/: middleware.py
src/app/model/: books.py  issued_books.py  responses.py  user.py
src/app/repositories/: books_repository.py  issued_book_repository.py  user_repository.py
src/app/scripts/: create_tables.py
src/app/services/: book_service.py  issue_book_service.py  user_service.py
src/app/utils/: context.py  utils.py
src/tests/controller_tests/: .coverage  test_book_controller.py  test_issue_book_controller.py  test_main.py  test_user_controller.py
src/tests/dto_tests/: test_user.py
src/tests/middleware_tests/: .coverage  test_middleware.py
src/tests/repository_tests/: .coverage  test_books_repository.py  test_issued_book_repository.py  test_user_repository.py
src/tests/services_test/: .coverage  test_issue_book_service.py
src/tests/services_tests/: test_book_service.py  test_user_service.py
src/tests/utils/: test_utils.py
src/tests/utils_tests/: test_utils.py
(+20 files in other folders)
