[metadata]
name = Library_Management
version = 1.0.0
description = Project for managing books in Library
author = Bhumit Jain

[options]
install_requires =
    annotated-types    0.7.0
    bcrypt             4.2.1
    cffi               1.17.1
    cfgv               3.4.0
    charset-normalizer 3.4.0
    colorama           0.4.6
    coverage           7.6.9
    cryptography       44.0.0
    distlib            0.3.9
    execnet            2.1.1
    filelock           3.16.1
    Flask              3.1.0
    identify           2.6.3
    idna               3.10
    iniconfig          2.0.0
    itsdangerous       2.2.0
    Jinja2             3.1.4
    jwt                1.3.1
    MarkupSafe         3.0.2
    nodeenv            1.9.1
    packaging          24.2
    pip                24.3.1
    pipenv             2024.4.0
    platformdirs       4.3.6
    pluggy             1.5.0
    pre_commit         4.0.1
    pycparser          2.22
    pydantic           2.10.3
    pydantic_core      2.27.1
    PyJWT              2.10.1
    pytest             8.3.4
    pytest-cov         6.0.0
    pytest-html        4.1.1
    pytest-metadata    3.1.1
    pytest-xdist       3.6.1
    PyYAML             6.0.2
    requests           2.32.3
    setuptools         75.3.0
    typing_extensions  4.12.2
    urllib3            2.2.3
    virtualenv         20.27.1

